--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="Theme.Hustle" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Hustle.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/hustle_green</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/hustle_logo_splash</item>
+        <item name="postSplashScreenTheme">@style/Theme.Hustle</item>
+    </style>
 </resources>
